[package]
name = "crustybots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crustybots"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.5"
rand = "0.8.5"
pathfinding = "4.11.0"
im = "15.1.0"
debug_print = "1.0.0"
lru = "0.12.5"

#pelita_rust_wrapper = { git = "https://github.com/Debilski/pelita-rust-wrapper" }
pelita_rust_wrapper = { path = "../pelita-rust" }
lazy_static = "1.4.0"
